[gd_scene load_steps=2 format=3 uid="uid://cvm8u87gjt3et"]

[ext_resource type="Script" path="res://addons/componentable/editor/create_component_dialog.gd" id="1_2thst"]

[node name="CreateComponentDialog" type="FileDialog"]
title = "Create Component"
initial_position = 2
size = Vector2i(800, 600)
visible = true
filters = PackedStringArray("*.gd ; Script Component", "*.tscn ; Scene Compoennt")
option_count = 3
option_0/name = "ComponentGroupNode"
option_1/name = "ComponentExtendsType"
option_1/values = PackedStringArray("ComponentNode", "ComponentNode2D", "ComponentNode3D", "ComponentNodeUI")
option_2/name = "ComponentHostType"
script = ExtResource("1_2thst")

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
